# ViscoCorrectCore

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
cmake/: ViscoCorrectCore.pc.in  ViscoCorrectCoreConfig.cmake.in
etc/utils/: coefficients.csv
include/spauly/vccore/: calculation_ctx.h  calculator.h  correction_context.h  data.h  input_parameters.h  input_types.h  project.h  vc_project.h
include/spauly/vccore/impl/: accuracy_type.h  bundle_types.h  conversion_functions.h  correction_context.h  math.h
include/spauly/vccore/utils/: coefficients.csv
src/: accuracy_type.cpp  calculation_ctx.cpp  calculator.cpp  conversion_functions.cpp  correction_context.cpp  project.cpp
test/: CMakeLists.txt
testing/: accuracy_type_test.cpp  calculator_test.cpp  conversion_functions_test.cpp  correction_context_test.cpp  math_test.cpp
